--- a/HaarlemFestival/Web.config
+++ b/HaarlemFestival/Web.config
@@ -1,11 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
-    <add name="HFDB" connectionString="Data Source= 194.171.20.101;Initial Catalog=HF1718B1; Persist Security Info=True;User ID=HF1718_grpB1;Password=zU5BKn8Rzy" providerName="System.Data.SqlClient" />
+    <add name="HFDB" connectionString="Data Source= 194.171.20.101;Initial Catalog=HF1718B1; Persist Security Info=True;User ID=HF1718_grpB1;Password=zU5BKn8Rzy"
+      providerName="System.Data.SqlClient" />
+    <add name="DBHF" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=DBHF-20171121155520; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|DBHF-20171121155520.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -74,4 +82,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
