--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -176,6 +176,10 @@
     <Compile Include="Migrations\201711271517211_locationupdate.Designer.cs">
       <DependentUpon>201711271517211_locationupdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711271524434_locationupdate2.cs" />
+    <Compile Include="Migrations\201711271524434_locationupdate2.Designer.cs">
+      <DependentUpon>201711271524434_locationupdate2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Account.cs" />
     <Compile Include="Model\Activity.cs" />
@@ -280,6 +284,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711271517211_locationupdate.resx">
       <DependentUpon>201711271517211_locationupdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711271524434_locationupdate2.resx">
+      <DependentUpon>201711271524434_locationupdate2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
