--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -251,6 +251,10 @@
     <Content Include="Views\Contact\Contact.cshtml" />
     <Content Include="Views\CheckOut\CheckOut1.cshtml" />
     <Content Include="Views\Jazz\Jazz.cshtml" />
+    <Content Include="Views\Jazz\JazzThursday.cshtml" />
+    <Content Include="Views\Jazz\JazzFriday.cshtml" />
+    <Content Include="Views\Jazz\JazzSaturday.cshtml" />
+    <Content Include="Views\Jazz\JazzSunday.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
