--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -276,6 +276,9 @@
     <Content Include="Views\Jazz\JazzFriday.cshtml" />
     <Content Include="Views\Jazz\JazzSaturday.cshtml" />
     <Content Include="Views\Jazz\JazzSunday.cshtml" />
+    <Content Include="Views\CheckOut\CheckOut2.cshtml" />
+    <Content Include="Views\CheckOut\CheckOut3.cshtml" />
+    <Content Include="Views\CheckOut\CheckOut4.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
