--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -195,6 +195,18 @@
     <Compile Include="Migrations\201712051328154_title,remarks,isPayed,rating.Designer.cs">
       <DependentUpon>201712051328154_title,remarks,isPayed,rating.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712081249409_cuisine-Update.cs" />
+    <Compile Include="Migrations\201712081249409_cuisine-Update.Designer.cs">
+      <DependentUpon>201712081249409_cuisine-Update.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712081255371_cuisine mapping.cs" />
+    <Compile Include="Migrations\201712081255371_cuisine mapping.Designer.cs">
+      <DependentUpon>201712081255371_cuisine mapping.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712081257261_cuisine mapping2.cs" />
+    <Compile Include="Migrations\201712081257261_cuisine mapping2.Designer.cs">
+      <DependentUpon>201712081257261_cuisine mapping2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Account.cs" />
     <Compile Include="Model\Activity.cs" />
@@ -210,6 +222,7 @@
     <Compile Include="Model\OrderHasTickets.cs" />
     <Compile Include="Model\Page.cs" />
     <Compile Include="Model\PageDescription.cs" />
+    <Compile Include="Model\PagePlusActivitiesPlusCuisines.cs" />
     <Compile Include="Model\PagePlusDescriptions.cs" />
     <Compile Include="Model\RegisterModel.cs" />
     <Compile Include="Model\Ticket.cs" />
@@ -228,8 +241,10 @@
     <Compile Include="Repositories\IAccountRepository.cs" />
     <Compile Include="Repositories\IActivityRepository.cs" />
     <Compile Include="Repositories\IPageDescriptionRepository.cs" />
+    <Compile Include="Repositories\ICuisineRepository.cs" />
     <Compile Include="Repositories\PageDescriptionRepository.cs" />
     <Compile Include="Repositories\IPageRepository.cs" />
+    <Compile Include="Repositories\CuisineRepository.cs" />
     <Compile Include="Repositories\PageRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -534,6 +549,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712051328154_title,remarks,isPayed,rating.resx">
       <DependentUpon>201712051328154_title,remarks,isPayed,rating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712081249409_cuisine-Update.resx">
+      <DependentUpon>201712081249409_cuisine-Update.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712081255371_cuisine mapping.resx">
+      <DependentUpon>201712081255371_cuisine mapping.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712081257261_cuisine mapping2.resx">
+      <DependentUpon>201712081257261_cuisine mapping2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisine.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisines2.resources" />
