--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -422,6 +422,7 @@
     <Content Include="Views\Dinner\DinnerActivity.cshtml" />
     <Content Include="Views\Historic.cshtml" />
     <Content Include="Views\Talking\Index.cshtml" />
+    <Content Include="Views\Historic\Historic.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
